# Changelog

All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](http://keepachangelog.com/)
and this project adheres to [Semantic Versioning](http://semver.org/).

## [0.0.1] - 2017-01-05
### Added
- Created project and directories
- Added README, Changelog, LICENSE, bower.json and package.json
- Added .gitignore