@@ -1,0 +1,26 @@
+
+module.exports = function (grunt) {
+
+    grunt.initConfig({
+        pkg : grunt.file.readJSON('package.json')
+
+
+
+
+    }); // END grunt.initConfig
+
+    grunt.loadNpmTasks('grunt-contrib-cssmin');
+    grunt.loadNpmTasks('grunt-contrib-copy');
+    grunt.loadNpmTasks('grunt-contrib-concat');
+    grunt.loadNpmTasks('grunt-contrib-uglify');
+    grunt.loadNpmTasks('grunt-contrib-jshint');
+    grunt.loadNpmTasks('grunt-contrib-watch');
+    grunt.loadNpmTasks('grunt-contrib-clean');
+    grunt.loadNpmTasks('grunt-contrib-connect');
+    grunt.loadNpmTasks('grunt-contrib-qunit');
+    grunt.loadNpmTasks('grunt-bump');
+    grunt.loadNpmTasks('grunt-zip');
+
+
+
+};
