@@ -39,8 +39,10 @@
     "async": "^2.1.4",
     "underscore": "^1.8.3",
     "underscore.string": "^3.3.4",
+    "backbone": "^1.3.3",
     "localforage": "^1.4.3",
     "validator-js": "^6.2.0",
-    "ckeditor": "^4.6.1"
+    "ckeditor": "^4.6.1",
+    "jquery.cookie": "^1.4.1"
   }
 }
